# Smart_TQDM

./: .gitignore  LICENSE  README.md  classification_tqdmpp_demo.ipynb  demo.py  demo_smart_bar.py  fluid_water_demo.py  mnist_cnn_smart_tqdm_demo.ipynb  neural_network_demo.py  pyproject.toml  real_training_test.py  requirements.txt  setup.py  test_smart_tqdm.py  working_neural_demo.py
examples/: advanced_features.py  basic_usage.py
smart_tqdm/: __init__.py  animations.py  config.py  display.py  emoji_selectors.py  exporters.py  metrics.py  smart_bar.py  smart_tqdm.py  themes.py
tqdmpp/: __init__.py  config.py  display.py  emoji_selectors.py  metrics.py  smart_bar.py
